# app/Http/Controllers/AuthorizedPersonsController.php
@@ -25,12 +25,11 @@ class AuthorizedPersonsController extends Controller
      *         response=200,
      *         description="OK",
      *         @OA\JsonContent(
-     *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="name", type="string", example=""),
+     *              @OA\Property(property="kid_id", type="number", example=1),
+     *              @OA\Property(property="tutor_id", type="number", example=1),
+     *              @OA\Property(property="name_kid", type="string", example=""),
+     *              @OA\Property(property="name_tutor", type="string", example=""),
      *              @OA\Property(property="identification", type="string", example=""),
-     *              @OA\Property(property="parent", type="string", example=""),
-     *              @OA\Property(property="phone", type="string", example=""),
-     *              @OA\Property(property="address", type="string", example=""),
      *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
      *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
      *         )
@@ -69,13 +68,11 @@ class AuthorizedPersonsController extends Controller
      *         response=200,
      *         description="OK",
      *         @OA\JsonContent(
-     *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="name", type="string", example=""),
+     *              @OA\Property(property="kid_id", type="number", example=1),
+     *              @OA\Property(property="tutor_id", type="number", example=1),
+     *              @OA\Property(property="name_kid", type="string", example=""),
+     *              @OA\Property(property="name_tutor", type="string", example=""),
      *              @OA\Property(property="identification", type="string", example=""),
-     *              @OA\Property(property="parent", type="string", example=""),
-     *              @OA\Property(property="phone", type="string", example=""),
-     *              @OA\Property(property="address", type="string", example=""),
-     *              @OA\Property(property="kid_id", type="integer", example="1"),
      *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
      *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
      *         )
@@ -92,7 +89,7 @@ class AuthorizedPersonsController extends Controller
 
     public function watch($id){
         try{
-            $authorization = Authorizations::with('kids')->find($id);
+            $authorization = Authorizations::with('kids')->with('tutors')->find($id);
             return response()->json(["data"=>$authorization],200);
         }catch (Exception $e) {
             return response()->json(["data"=>"none"],200);
@@ -111,13 +108,8 @@ class AuthorizedPersonsController extends Controller
      *         required=true,
      *         @OA\JsonContent(
      *            required={"name"},
-     *            @OA\Property(property="kid_id", type="integer", format="integer", example="1"),
-     *            @OA\Property(property="name", type="string", format="string", example="Marcos"),
-     *            @OA\Property(property="last_name", type="string", format="string", example="Garcia"),
-     *            @OA\Property(property="identification", type="string", format="string", example="10101010101"),
-     *            @OA\Property(property="parent", type="string", format="string", example="Tio"),
-     *            @OA\Property(property="phone", type="string", format="string", example="8094533344"),
-     *            @OA\Property(property="address", type="string", format="string", example="Here"),
+     *              @OA\Property(property="kid_id", type="number", example=1),
+     *              @OA\Property(property="tutor_id", type="number", example=1),
      *         ),
      *      ),
      *     @OA\Response(
@@ -133,43 +125,12 @@ class AuthorizedPersonsController extends Controller
     public function register(Request $request)
     {
         try {
-            // Validar los datos del request
-            $request->validate([
-                'kid_id' => 'exists:kids,id',
-                'name' => 'required|string|max:255',
-                'last_name' => 'required|string|max:255',
-                'identification' => 'required|string|max:255',
-                'parent' => 'required|string|max:255',
-                'phone' => 'required|string|max:255',
-                'address' => 'required|string|max:255'
-            ]);
-
-            // Usar transacción para asegurar la consistencia de la base de datos
-            DB::beginTransaction();
-
-            // Crear una nueva instancia de Authorization y guardar
             $authorization = new Authorizations($request->all());
             $authorization->save();
-
-            // Verificar la existencia del kid_id en la base de datos
-            $kid = Kids::findOrFail($request->kid_id);
-
-            // Adjuntar el kid_id a la relación kids
-            $authorization->kids()->attach($kid->id);
-
-            DB::commit();
-
             return response()->json(["data" => $authorization], 200);
 
-        } catch (ValidationException $e) {
-            // Manejo de excepciones de validación
-            return response()->json(["error" => "Errores de validación", "details" => $e->errors()], 422);
-        } catch (ModelNotFoundException $e) {
-            // Manejo de excepciones de modelo no encontrado
-            return response()->json(["error" => "Modelo no encontrado: " . $e->getMessage()], 404);
         } catch (Exception $e) {
-            // Manejo de excepciones genéricas
-            return response()->json(["error" => "Ocurrió un error al procesar la solicitud: " . $e->getMessage()], 500);
+            return response()->json(["data"=>"Problemas tecnicos"],500);
         }
     }
 
@@ -191,13 +152,8 @@ class AuthorizedPersonsController extends Controller
      *         required=true,
      *         @OA\JsonContent(
      *            required={"name"},
-     *            @OA\Property(property="kid_id", type="integer", format="integer", example="1"),
-     *            @OA\Property(property="name", type="string", format="string", example="Marcos"),
-     *            @OA\Property(property="last_name", type="string", format="string", example="Garcia"),
-     *            @OA\Property(property="identification", type="string", format="string", example="10101010101"),
-     *            @OA\Property(property="parent", type="string", format="string", example="Tio"),
-     *            @OA\Property(property="phone", type="string", format="string", example="8094533344"),
-     *            @OA\Property(property="address", type="string", format="string", example="Here"),
+     *              @OA\Property(property="kid_id", type="number", example=1),
+     *              @OA\Property(property="tutor_id", type="number", example=1),
      *         ),
      *      ),
      *     @OA\Response(
@@ -216,7 +172,7 @@ class AuthorizedPersonsController extends Controller
             $authorization->update($request->all());
             return response()->json(["data"=>"ok"],200);
         }catch (Exception $e) {
-            return response()->json(["data"=>"none"],200);
+            return response()->json(["data"=>"Problemas tecnicos"],500);
         }
     }
 
@@ -249,7 +205,7 @@ class AuthorizedPersonsController extends Controller
             Authorizations::destroy($id);
             return response()->json(["data"=>"ok"],200);
         }catch (Exception $e) {
-            return response()->json(["data"=>"none"],200);
+            return response()->json(["data"=>"Problemas tecnicos"],500);
         }
     }
 
